<resources>
    <string name="title">Title : </string>
    <string name="rating">Rating : </string>
    <string name="release_date">Release Date : </string>
    <string name="detail">Detail : </string>
    <string name="asdf">Profile</string>

    <string name="app_name">Movies</string>
    <string name="tab_movie">Movies</string>
    <string name="tab_tv">Tv Shows</string>
    <string name="title_activity_detail">Activity detail</string>
    <string name="title_activity_Main">Movie DB</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="top_rated">Top Rated</string>
    <string name="airing_today">Airing Today</string>
    <string name="popular">Popular</string>
    <string name="title_activity_language">Language</string>
    <string name="ganti_bahasa">Change Language</string>

    <string name="action_favorite">Favorite</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Example settings for Notifications -->

    <string name="action_notification">Notifications</string>
    <string name="key_reminder_daily">key_daily_reminder</string>
    <string name="label_daily_reminder_summary">Turn on/off daily reminder</string>
    <string name="label_daily_reminder_title">Daily Reminder</string>
    <string name="label_upcoming_reminder_title">Upcoming Reminder</string>
    <string name="key_reminder_upcoming">key_upcoming_reminder</string>
    <string name="label_upcoming_reminder_summary">Turn on/off upcoming reminder</string>
    <string name="key_setting_locale">key_setting_locale</string>
    <string name="label_setting_locale_summary">Setting Locale</string>
    <string name="label_setting_locale_title">Change your phone localization</string>
    <string name="msg_daily_reminder">Hi, movie apps are waiting for you!</string>
    <string name="upcoming_reminder_msg">Hi, today %s is release  </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>